prevent horizontal scroll

--- a/module5-solution/css/common.css
+++ b/module5-solution/css/common.css
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 .loading-indicator {
     display: block;
     width: 70px;
